--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="blue">#4256ec</color>
+    <color name="green">#47ea38</color>
+    <color name="orange">#f16941</color>
+    <color name="red">#d61818</color>
 </resources>
